# veritas-ai

./: .gitignore  Dockerfile  LICENSE  README.md  composer.json  health.php
api/analysis/: analyze.php  delete_history.php  history.php
api/auth_user/: forgot_password.php  login.php  me.php  register.php  reset_password.php  verify_reset_code.php
api/middleware/: auth.php
config/: ai.php  database.php  jwt.php  mail.php  test_connection.php
helper/: ai_helper.php  jwt_helper.php  mail_helper.php  response.php
public/: dashboard.html  forgot_password.html  login.html  register.html  terms.html
public/assets/css/: dashboard.css  forgot_password.css  login.css  register.css
public/assets/js/: config.js  dashboard.js  forgot_password.js  login.js  register.js
service_ai/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
service_ai/app/: main.py
service_ai/app/api/: routes.py
service_ai/app/core/: config.py  logger.py  security.py
service_ai/app/exceptions/: crawler.py  gemini.py
service_ai/app/models/: response.py
service_ai/app/prompts/: analyzer_prompt.py
service_ai/app/services/: analyzer.py  crawler.py  gemini.py  rag.py  search.py
service_ai/app/utils/: helpers.py  parser.py  validators.py
