[project]
name = "service-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "trafilatura>=2.1.0",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
